user.getOwnExpenses
