# src/server/api/openapi.generated.json
@@ -177,6 +177,214 @@
         }
       }
     },
+    "/user.getOwnExpenses": {
+      "get": {
+        "operationId": "user.getOwnExpenses",
+        "tags": ["user"],
+        "responses": {
+          "200": {
+            "description": "Successful response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "result": {
+                      "type": "object",
+                      "properties": {
+                        "data": {
+                          "type": "array",
+                          "items": {
+                            "type": "object",
+                            "properties": {
+                              "group": {
+                                "oneOf": [
+                                  {
+                                    "type": "object",
+                                    "properties": {
+                                      "name": {
+                                        "type": "string"
+                                      },
+                                      "id": {
+                                        "type": "number"
+                                      },
+                                      "userId": {
+                                        "type": "number"
+                                      },
+                                      "image": {
+                                        "type": ["string", "null"]
+                                      },
+                                      "defaultCurrency": {
+                                        "type": ["string", "null"]
+                                      },
+                                      "createdAt": {
+                                        "type": "string",
+                                        "format": "date-time"
+                                      },
+                                      "updatedAt": {
+                                        "type": "string",
+                                        "format": "date-time"
+                                      },
+                                      "publicId": {
+                                        "type": "string"
+                                      },
+                                      "splitwiseGroupId": {
+                                        "type": ["string", "null"]
+                                      },
+                                      "simplifyDebts": {
+                                        "type": "boolean"
+                                      },
+                                      "archivedAt": {
+                                        "oneOf": [
+                                          {
+                                            "type": "string",
+                                            "format": "date-time"
+                                          },
+                                          {
+                                            "type": "null"
+                                          }
+                                        ]
+                                      }
+                                    },
+                                    "required": [
+                                      "name",
+                                      "id",
+                                      "userId",
+                                      "image",
+                                      "defaultCurrency",
+                                      "createdAt",
+                                      "updatedAt",
+                                      "publicId",
+                                      "splitwiseGroupId",
+                                      "simplifyDebts",
+                                      "archivedAt"
+                                    ],
+                                    "additionalProperties": false
+                                  },
+                                  {
+                                    "type": "null"
+                                  }
+                                ]
+                              },
+                              "name": {
+                                "type": "string"
+                              },
+                              "id": {
+                                "type": "string"
+                              },
+                              "currency": {
+                                "type": "string"
+                              },
+                              "groupId": {
+                                "type": ["number", "null"]
+                              },
+                              "amount": {
+                                "type": "integer",
+                                "format": "bigint"
+                              },
+                              "createdAt": {
+                                "type": "string",
+                                "format": "date-time"
+                              },
+                              "updatedAt": {
+                                "type": "string",
+                                "format": "date-time"
+                              },
+                              "paidBy": {
+                                "type": "number"
+                              },
+                              "addedBy": {
+                                "type": "number"
+                              },
+                              "category": {
+                                "type": "string"
+                              },
+                              "splitType": {
+                                "type": "string",
+                                "enum": [
+                                  "EQUAL",
+                                  "PERCENTAGE",
+                                  "EXACT",
+                                  "SHARE",
+                                  "ADJUSTMENT",
+                                  "SETTLEMENT",
+                                  "CURRENCY_CONVERSION"
+                                ]
+                              },
+                              "expenseDate": {
+                                "type": "string",
+                                "format": "date-time"
+                              },
+                              "fileKey": {
+                                "type": ["string", "null"]
+                              },
+                              "deletedAt": {
+                                "oneOf": [
+                                  {
+                                    "type": "string",
+                                    "format": "date-time"
+                                  },
+                                  {
+                                    "type": "null"
+                                  }
+                                ]
+                              },
+                              "deletedBy": {
+                                "type": ["number", "null"]
+                              },
+                              "updatedBy": {
+                                "type": ["number", "null"]
+                              },
+                              "transactionId": {
+                                "type": ["string", "null"]
+                              },
+                              "recurrenceId": {
+                                "type": ["number", "null"]
+                              },
+                              "conversionToId": {
+                                "type": ["string", "null"]
+                              }
+                            },
+                            "required": [
+                              "group",
+                              "name",
+                              "id",
+                              "currency",
+                              "groupId",
+                              "amount",
+                              "createdAt",
+                              "updatedAt",
+                              "paidBy",
+                              "addedBy",
+                              "category",
+                              "splitType",
+                              "expenseDate",
+                              "fileKey",
+                              "deletedAt",
+                              "deletedBy",
+                              "updatedBy",
+                              "transactionId",
+                              "recurrenceId",
+                              "conversionToId"
+                            ],
+                            "additionalProperties": false
+                          }
+                        }
+                      },
+                      "required": ["data"]
+                    }
+                  },
+                  "required": ["result"]
+                }
+              }
+            }
+          },
+          "default": {
+            "$ref": "#/components/responses/Error"
+          }
+        }
+      }
+    },
     "/group.getAllGroups": {
       "get": {
         "operationId": "group.getAllGroups",
